fix spacing on footer map

--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -14,6 +14,10 @@
   text-align: center;
 }
 
+.spacer {
+  height: 40px;
+}
+
 .map {
   height: 350px;
   opacity: 0.5;
@@ -29,7 +33,7 @@
   background-color: #fefefe;
   border: solid 1px #eaeaea;
   margin: 0px 0px 0px 100px;
-  padding: 50px;
+  padding: 20px 0px 0px 30px;
 }
 
 .contact {
